Series and DatetimeIndex done

--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -2948,12 +2948,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 420,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-01    0.970930\n",
+       "2015-01-02    0.252110\n",
+       "2015-01-05    0.824667\n",
+       "2015-01-06    0.266204\n",
+       "2015-01-07    0.706947\n",
+       "                ...   \n",
+       "2015-12-25    0.736211\n",
+       "2015-12-28    0.139778\n",
+       "2015-12-29    0.513310\n",
+       "2015-12-30    0.501321\n",
+       "2015-12-31    0.054223\n",
+       "Freq: B, Length: 261, dtype: float64"
+      ]
+     },
+     "execution_count": 420,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dti = pd.date_range(start='2015-01-01', end= '2015-12-31', freq='B')\n",
+    "s = pd.Series(np.random.rand(len(dti)), index = dti)\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2964,12 +2990,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 422,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27.98410981703177"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Wednesday = 2\n",
+    "s[s.index.weekday == Wednesday].sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2980,12 +3020,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 432,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     0.519385\n",
+       "2     0.442102\n",
+       "3     0.553555\n",
+       "4     0.367926\n",
+       "5     0.482957\n",
+       "6     0.560073\n",
+       "7     0.566288\n",
+       "8     0.593495\n",
+       "9     0.538367\n",
+       "10    0.509801\n",
+       "11    0.538334\n",
+       "12    0.464915\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 432,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# s[s.index.month].mean()\n",
+    "# s.groupby(s.index.month).mean()\n",
+    "s.resample('M').mean()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2996,12 +3063,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 438,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-31   2015-01-01\n",
+       "2015-05-31   2015-03-06\n",
+       "2015-09-30   2015-09-21\n",
+       "2016-01-31   2015-12-16\n",
+       "Freq: 4M, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 438,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.groupby(pd.Grouper(freq = '4M')).idxmax()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3012,12 +3096,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 439,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "s = pd.date_range(start= '2015-01-01', end= '2016-12-31', freq= 'WOM-3THU')"
+   ]
   },
   {
    "cell_type": "markdown",
