--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -3151,12 +3151,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 452,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays              Airline\n",
+       "0      LoNDon_paris         10045      [23, 47]               KLM(!)\n",
+       "1      MAdrid_miLAN         10055            []    <Air France> (12)\n",
+       "2  londON_StockhOlm         10065  [24, 43, 87]  (British Airways. )\n",
+       "3    Budapest_PaRis         10075          [13]       12. Air France\n",
+       "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
+      ]
+     },
+     "execution_count": 452,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'From_To': ['LoNDon_paris', 'MAdrid_miLAN', 'londON_StockhOlm', \n",
+    "                               'Budapest_PaRis', 'Brussels_londOn'],\n",
+    "              'FlightNumber': [10045, np.nan, 10065, np.nan, 10085],\n",
+    "              'RecentDelays': [[23, 47], [], [24, 43, 87], [13], [67, 32]],\n",
+    "                   'Airline': ['KLM(!)', '<Air France> (12)', '(British Airways. )', \n",
+    "                               '12. Air France', '\"Swiss Air\"']})\n",
+    "\n",
+    "df['FlightNumber'] = df['FlightNumber'].interpolate().astype(int)\n",
+    "df\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3167,12 +3258,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 455,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon</td>\n",
+       "      <td>paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid</td>\n",
+       "      <td>miLAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON</td>\n",
+       "      <td>StockhOlm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>PaRis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>londOn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       From         To\n",
+       "0    LoNDon      paris\n",
+       "1    MAdrid      miLAN\n",
+       "2    londON  StockhOlm\n",
+       "3  Budapest      PaRis\n",
+       "4  Brussels     londOn"
+      ]
+     },
+     "execution_count": 455,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = df.From_To.str.split('_', expand = True)\n",
+    "temp.columns = ['From', 'To']\n",
+    "temp"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3183,12 +3347,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 469,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       From         To\n",
+       "0    London      Paris\n",
+       "1    Madrid      Milan\n",
+       "2    London  Stockholm\n",
+       "3  Budapest      Paris\n",
+       "4  Brussels     London"
+      ]
+     },
+     "execution_count": 469,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp['From'] = temp['From'].str.capitalize()\n",
+    "temp['To'] = temp['To'].str.capitalize()\n",
+    "temp"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3199,12 +3436,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 472,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays              Airline      From         To\n",
+       "0         10045      [23, 47]               KLM(!)    London      Paris\n",
+       "1         10055            []    <Air France> (12)    Madrid      Milan\n",
+       "2         10065  [24, 43, 87]  (British Airways. )    London  Stockholm\n",
+       "3         10075          [13]       12. Air France  Budapest      Paris\n",
+       "4         10085      [67, 32]          \"Swiss Air\"  Brussels     London"
+      ]
+     },
+     "execution_count": 472,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop('From_To', axis = 1)\n",
+    "df = df.join(temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3215,12 +3542,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 474,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>British Airways</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>Swiss Air</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays          Airline      From  \\\n",
+       "0      LoNDon_paris         10045      [23, 47]              KLM    London   \n",
+       "1      MAdrid_miLAN         10055            []       Air France    Madrid   \n",
+       "2  londON_StockhOlm         10065  [24, 43, 87]  British Airways    London   \n",
+       "3    Budapest_PaRis         10075          [13]       Air France  Budapest   \n",
+       "4   Brussels_londOn         10085      [67, 32]        Swiss Air  Brussels   \n",
+       "\n",
+       "          To  \n",
+       "0      Paris  \n",
+       "1      Milan  \n",
+       "2  Stockholm  \n",
+       "3      Paris  \n",
+       "4     London  "
+      ]
+     },
+     "execution_count": 474,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Airline'] = df['Airline'].str.extract('([a-zA-Z\\s]+)', expand = False).str.strip()\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3233,12 +3663,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 481,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "      <th>delays_1</th>\n",
+       "      <th>delays_2</th>\n",
+       "      <th>delays_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>KLM</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>British Airways</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>Swiss Air</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber          Airline      From         To  \\\n",
+       "0      LoNDon_paris         10045              KLM    London      Paris   \n",
+       "1      MAdrid_miLAN         10055       Air France    Madrid      Milan   \n",
+       "2  londON_StockhOlm         10065  British Airways    London  Stockholm   \n",
+       "3    Budapest_PaRis         10075       Air France  Budapest      Paris   \n",
+       "4   Brussels_londOn         10085        Swiss Air  Brussels     London   \n",
+       "\n",
+       "   delays_1  delays_2  delays_3  \n",
+       "0      23.0      47.0       NaN  \n",
+       "1       NaN       NaN       NaN  \n",
+       "2      24.0      43.0      87.0  \n",
+       "3      13.0       NaN       NaN  \n",
+       "4      67.0      32.0       NaN  "
+      ]
+     },
+     "execution_count": 481,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delays = df['RecentDelays'].apply(pd.Series)\n",
+    "delays.columns = ['delays_{}'.format(n) for n in range(1, len(delays.columns)+1)]\n",
+    "df = df.drop('RecentDelays', axis = 1).join(delays)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
