--- a/100-pandas-puzzles.ipynb
+++ b/100-pandas-puzzles.ipynb
@@ -3830,12 +3830,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 483,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A  0    0.296972\n",
+       "   1    0.118493\n",
+       "   2    0.914128\n",
+       "   3    0.217730\n",
+       "   4    0.820532\n",
+       "   5    0.965581\n",
+       "   6    0.280320\n",
+       "   7    0.470491\n",
+       "   8    0.986829\n",
+       "   9    0.093840\n",
+       "B  0    0.188099\n",
+       "   1    0.549903\n",
+       "   2    0.109852\n",
+       "   3    0.328228\n",
+       "   4    0.169246\n",
+       "   5    0.722211\n",
+       "   6    0.941776\n",
+       "   7    0.880987\n",
+       "   8    0.275665\n",
+       "   9    0.587059\n",
+       "C  0    0.184743\n",
+       "   1    0.573251\n",
+       "   2    0.745904\n",
+       "   3    0.359567\n",
+       "   4    0.909681\n",
+       "   5    0.641213\n",
+       "   6    0.478663\n",
+       "   7    0.845627\n",
+       "   8    0.713743\n",
+       "   9    0.880876\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 483,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters = ['A', 'B', 'C']\n",
+    "numbers = list(range(10))\n",
+    "mi = pd.MultiIndex.from_product([letters, numbers])\n",
+    "s = pd.Series(np.random.rand(30), index = mi)\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3846,12 +3893,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 485,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A  0    0.296972\n",
+       "   1    0.118493\n",
+       "   2    0.914128\n",
+       "   3    0.217730\n",
+       "   4    0.820532\n",
+       "   5    0.965581\n",
+       "   6    0.280320\n",
+       "   7    0.470491\n",
+       "   8    0.986829\n",
+       "   9    0.093840\n",
+       "B  0    0.188099\n",
+       "   1    0.549903\n",
+       "   2    0.109852\n",
+       "   3    0.328228\n",
+       "   4    0.169246\n",
+       "   5    0.722211\n",
+       "   6    0.941776\n",
+       "   7    0.880987\n",
+       "   8    0.275665\n",
+       "   9    0.587059\n",
+       "C  0    0.184743\n",
+       "   1    0.573251\n",
+       "   2    0.745904\n",
+       "   3    0.359567\n",
+       "   4    0.909681\n",
+       "   5    0.641213\n",
+       "   6    0.478663\n",
+       "   7    0.845627\n",
+       "   8    0.713743\n",
+       "   9    0.880876\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 485,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3862,12 +3952,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 491,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A  1    0.118493\n",
+       "   3    0.217730\n",
+       "   6    0.280320\n",
+       "B  1    0.549903\n",
+       "   3    0.328228\n",
+       "   6    0.941776\n",
+       "C  1    0.573251\n",
+       "   3    0.359567\n",
+       "   6    0.478663\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 491,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.loc[:,[1,3,6]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3878,12 +3990,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 492,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A  5    0.965581\n",
+       "   6    0.280320\n",
+       "   7    0.470491\n",
+       "   8    0.986829\n",
+       "   9    0.093840\n",
+       "B  5    0.722211\n",
+       "   6    0.941776\n",
+       "   7    0.880987\n",
+       "   8    0.275665\n",
+       "   9    0.587059\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 492,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.loc[:'B', 5:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3894,12 +4029,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 497,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    5.164917\n",
+       "B    4.753027\n",
+       "C    6.333267\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 497,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.groupby(level=0).sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3910,12 +4061,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 498,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    5.164917\n",
+       "B    4.753027\n",
+       "C    6.333267\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 498,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.unstack().sum(axis = 1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3926,10 +4093,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 500,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0  A    0.296972\n",
+       "1  A    0.118493\n",
+       "2  A    0.914128\n",
+       "3  A    0.217730\n",
+       "4  A    0.820532\n",
+       "5  A    0.965581\n",
+       "6  A    0.280320\n",
+       "7  A    0.470491\n",
+       "8  A    0.986829\n",
+       "9  A    0.093840\n",
+       "0  B    0.188099\n",
+       "1  B    0.549903\n",
+       "2  B    0.109852\n",
+       "3  B    0.328228\n",
+       "4  B    0.169246\n",
+       "5  B    0.722211\n",
+       "6  B    0.941776\n",
+       "7  B    0.880987\n",
+       "8  B    0.275665\n",
+       "9  B    0.587059\n",
+       "0  C    0.184743\n",
+       "1  C    0.573251\n",
+       "2  C    0.745904\n",
+       "3  C    0.359567\n",
+       "4  C    0.909681\n",
+       "5  C    0.641213\n",
+       "6  C    0.478663\n",
+       "7  C    0.845627\n",
+       "8  C    0.713743\n",
+       "9  C    0.880876\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 500,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss = s.swaplevel()\n",
+    "ss"
+   ]
   },
   {
    "cell_type": "markdown",
